add 3dstreet logo to toolbar

--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -14,6 +14,11 @@
   right 0
   top 0
 
+img#logo
+  height: 14px
+  vertical-align: right
+  margin: 10px
+
 .toolbarButtons
   position relative
 
