Changed Text Style
Changed text style to rubik, but it did not change to individual components

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,12 +1,12 @@
 @import './lib';
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap');
 body.aframe-inspector-opened,
 .toggle-edit
-  font-family BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+  font-family Rubik, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
 
 .wf-roboto-n4-active body.aframe-inspector-opened,
 .wf-roboto-n4-active .toggle-edit
-  font-family BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+  font-family Rubik, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
 
 body.aframe-inspector-opened
   background $bgdark
