--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap');
+
 $primary=#1faaf2
 $primaryhover=lighten(#1faaf2, 35%)
 
@@ -18,8 +20,8 @@ $grayhover=#444
 $lightgray=#AAA
 $white=#c3c3c3
 
-$normalfont=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
-$monospace=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+$normalfont= Rubik, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+$monospace= Rubik, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
 
 media--1024() {
   @media (min-width: 1024px) {
