Added Link & color changes
Added 3d.st and changed list color widget color still black

--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -2,8 +2,8 @@
 
 #viewportBar
   align-items center
-  background-color $bg
-  color $white
+  background-color #edebef
+  color #0f0a13
   display flex
   flex-grow 2
   height 32px
@@ -66,7 +66,7 @@ img#logo
   .select__control
     background none
   .select__single-value
-    color $white
+    color $black
     &:hover
       color $primary
 
