--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -66,7 +66,7 @@ img#logo
   .select__control
     background none
   .select__single-value
-    color $black
+    color #4B3461
     &:hover
       color $primary
 
