--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap');
 
 $primary=#1faaf2
 $primaryhover=lighten(#1faaf2, 35%)
